# avitab-browser

./: .gitignore  CMakeLists.txt  README.md  build_all_platforms.sh  build_platforms.sh  toolchain-linux.cmake  toolchain-mac.cmake  toolchain-windows.cmake
Avitab-Browser.xcodeproj/: project.pbxproj
Avitab-Browser.xcodeproj/xcshareddata/xcschemes/: Debug.xcscheme  Linux.xcscheme  Mac.xcscheme  Windows.xcscheme  XP11.xcscheme
assets/: notify.pcm
src/: browser.cpp  browser.h  main.cpp  statusbar.cpp  statusbar.h
src/include/: appstate.cpp  appstate.h  config.h
src/include/components/: button.cpp  button.h  image.cpp  image.h  notification.cpp  notification.h
src/include/components/browser/: browser_handler.cpp  browser_handler.h  host_func_handler.cpp  host_func_handler.h  xplm_v8_handler.cpp  xplm_v8_handler.h
src/include/lib/: keycodes.h  mac_keycodes.h  unix_keycodes.h
src/include/lib/lodepng/: lodepng.cpp  lodepng.h
src/include/utils/: cursor.h  cursor.mm  dataref.cpp  dataref.h  drawing.cpp  drawing.h  path.cpp  path.h
src/include/utils/cursor/: cursor.h  cursor_linux.cpp  cursor_mac.mm  cursor_win.cpp
